--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
 	<div id="container">
 		<h1>Le Morpion</h1>
-		<p>"Morpion" is the French name of the Tic-Tac-Toe game.</p>
 
-		<p>How many player(s) for this game?</p>
+	<!-- AI not setup... -->
+		<!-- p>How many player(s) for this game?</p>
 		<button class="vs">Vs A.I. </button>
-		<button class="vs">Vs a friend</button>
+		<button class="vs">Vs a friend</button> -->
+	
 
 		<div class="play1Invisible"><p style="color:green">player one has to play</p></div>
 		<div class="play2Invisible"><p style="color:pink">player two or AI has to play</p></div>
@@ -50,7 +51,8 @@
 		</div>
 
   </div>
-	
+	<p class="winnerOne">The player one is the winner</p>
+	<p class="winnerTwo">The player two is the winner</p>
 	<script src="js/script.js"></script>
 </body>
 </html>
