--- a/index.html
+++ b/index.html
@@ -20,23 +20,30 @@
 		<div class="play2Invisible"><p style="color:pink">player two or AI has to play</p></div>
 
 		<div id="board">
-	    <table>
-	      <tr id="row1">
-	        <td class="square a"></td>
-	        <td class="square b"></td>
-	        <td class="square c"></td>
-	      </tr>
-	      <tr id="row2">
-	        <td class="square d"></td>
-	        <td class="square e"></td>
-	        <td class="square f"></td>
-	      </tr>
-	      <tr id="row3">
-	        <td class="square g"></td>
-	        <td class="square h"></td>
-	        <td class="square i"></td>
-	      </tr>
-	    </table>
+		    <table>
+		      <tr id="row1">
+		        <td class="square a"></td>
+		        <td class="square b"></td>
+		        <td class="square c"></td>
+		      </tr>
+		      <tr id="row2">
+		        <td class="square d"></td>
+		        <td class="square e"></td>
+		        <td class="square f"></td>
+		      </tr>
+		      <tr id="row3">
+		        <td class="square g"></td>
+		        <td class="square h"></td>
+		        <td class="square i"></td>
+		      </tr>
+		    </table>
+			
+			<div id="tableScore">
+				<p class="player1Score">Player one has</p>
+				<p class="score1">0</p>
+				<p class="player2Score">Player two has</p>
+				<p class="score2">0</p>
+			</div>
 
 	   </div>
 
