last changes + hover effect on table

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<button class="vs">Vs a friend</button> -->
 	
 
-		<div class="play1Invisible"><p style="color:green">player one has to play</p></div>
-		<div class="play2Invisible"><p style="color:pink">player two or AI has to play</p></div>
+		<div class="play1Invisible"><p style="color:green">Player One move</p></div>
+		<div class="play2Invisible"><p style="color:pink">Player Two move</p></div>
 
 		<div id="board">
 		    <table>
@@ -39,9 +39,9 @@
 		    </table>
 			
 			<div id="tableScore">
-				<p class="player1Score">Player one has</p>
+				<p class="player1Score">Player One score</p>
 				<p class="score1">0</p>
-				<p class="player2Score">Player two has</p>
+				<p class="player2Score">Player Two score</p>
 				<p class="score2">0</p>
 			</div>
 
@@ -50,16 +50,16 @@
 	   <button class="newGame">New Game</button>
 
 		<div class="winnerOneInvisible">
-			<p style="color:green">Player one is the winner</p>
+			<p style="color:white">Player One is the winner</p>
 		</div>
 
 		<div class="winnerTwoInvisible">
-			<p style="color:pink">Player two is the winner</p>
+			<p style="color:white">Player Two is the winner</p>
 		</div>
 
   </div>
-	<p class="winnerOne">The player one is the winner</p>
-	<p class="winnerTwo">The player two is the winner</p>
+	<p class="winnerOne">Player One is the Winner</p>
+	<p class="winnerTwo">Player Two is the Winner</p>
 	<script src="js/script.js"></script>
 </body>
 </html>
