draw match setup

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				<p class="score1">0</p>
 				<p class="player2Score">Player Two score</p>
 				<p class="score2">0</p>
+				<p id="draw">Draw</p>
 			</div>
 
 	   </div>
@@ -56,10 +57,11 @@
 		<div class="winnerTwoInvisible">
 			<p style="color:white">Player Two is the winner</p>
 		</div>
-
+			
   </div>
 	<p class="winnerOne">Player One is the Winner</p>
 	<p class="winnerTwo">Player Two is the Winner</p>
+	
 	<script src="js/script.js"></script>
 </body>
 </html>
